--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,13 @@
 }
 
 body {
--webkit-font-smoothing: antialiased !important;
-text-align: justify;
+  -webkit-font-smoothing: antialiased !important;
+  text-align: justify;
+}
+
+h2 {
+  color: #573e7d;
+  font-weight: bold;
 }
 
 header {
